--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="Nav">
             Nav
         </header>
-
+<!-- need to put the article inside of the section and the h1, h2, h3 and p inside of the article -->
         <section id="left">
             <h1 class="section">
                 section
